rns-lang/src/lexer/snapshots/directives-code_in_sequence.snap
---
source: rns/src/lexer/snapshot_tests.rs
expression: formatted
---
----- SOURCE -----
.method
.code
.code_end
----- TOKENS -----
KIND        | SPAN    | LSP     | TEXT
----        | ----    | ---     | ----
DotMethod   | 0..7    | 0:0..7  | .method
Newline     | 7..8    | 0:7..8  | \n
DotCode     | 8..13   | 1:0..5  | .code
Newline     | 13..14  | 1:5..6  | \n
DotCodeEnd  | 14..23  | 2:0..9  | .code_end
