rns-lang/src/lexer/snapshots/directives-code_with_identifier.snap
---
source: rns/src/lexer/snapshot_tests.rs
expression: formatted
---
----- SOURCE -----
.code myLabel
----- TOKENS -----
KIND                   | SPAN   | LSP      | TEXT
----                   | ----   | ---      | ----
DotCode                | 0..5   | 0:0..5   | .code
Identifier("myLabel")  | 6..13  | 0:6..13  | myLabel
