rns-lang/src/lexer/snapshots/dot-bare_dot.snap
---
source: rns/src/lexer/snapshot_tests.rs
expression: formatted
---
----- SOURCE -----
.
----- TOKENS -----
KIND             | SPAN  | LSP     | TEXT
----             | ----  | ---     | ----
Identifier(".")  | 0..1  | 0:0..1  | .
Newline          | 1..2  | 0:1..2  | \n
