rns-lang/src/lexer/snapshots/identifiers-directive_as_identifier.snap
---
source: rns/src/lexer/snapshot_tests.rs
expression: formatted
---
----- SOURCE -----
.super ".super"
----- TOKENS -----
KIND                  | SPAN   | LSP      | TEXT
----                  | ----   | ---      | ----
DotSuper              | 0..6   | 0:0..6   | .super
Identifier(".super")  | 7..15  | 0:7..15  | ".super"
