rns-lang/src/lexer/snapshots/identifiers-keyword_case_sensitivity.snap
---
source: rns/src/lexer/snapshot_tests.rs
expression: formatted
---
----- SOURCE -----
Public PUBLIC Static STATIC public static
----- TOKENS -----
KIND                  | SPAN    | LSP       | TEXT
----                  | ----    | ---       | ----
Identifier("Public")  | 0..6    | 0:0..6    | Public
Identifier("PUBLIC")  | 7..13   | 0:7..13   | PUBLIC
Identifier("Static")  | 14..20  | 0:14..20  | Static
Identifier("STATIC")  | 21..27  | 0:21..27  | STATIC
AccessFlag(public)    | 28..34  | 0:28..34  | public
AccessFlag(static)    | 35..41  | 0:35..41  | static
